<resources>
    <string name="app_name">খুচরা টাকা</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_acc">Add Accounts</string>
    <string name="drawer_item_report">Expense Report</string>
    <string name="drawer_item_purchase">Purchase</string>
    <string name="drawer_item_transaction_log">Transaction Log</string>
    <string name="drawer_item_my_qr_code">My QR Code</string>
    <string name="drawer_item_logout">Log Out</string>
    <string name="drawer_item_finger_print">Set FingerPrint</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_report_pie">ReportPieActivity</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="r_u_sure">Are you sure?</string>
    <string name="positive_pay">Pay</string>
    <string name="negative_pay">Not now.</string>
    <string name="bd_tk">৳</string>

    <string name="retype_new_pin_tag_text">Retype</string>
    <string name="verification_btn_text">Verify</string>
    <string name="new_pin_tag_text">New PIN</string>
    <string name="user_id_tag_text">User ID</string>
    <string name="phone_number_hint">Phone No</string>
    <string name="auto_login">Auto LogIn</string>
    <string name="login_btn_text">Log In</string>
    <string name="account_existence_question">Do you want to register?</string>
    <string name="register">Register</string>
    <string name="agree_text">Agree to</string>
    <string name="tc_decline_btn_text">Decline</string>
    <string name="tc_agree_btn_text">Agreed</string>
    <string name="terms_and_conditions_text"><u>Terms &amp; Conditions</u></string>
    <string name="registration_btn_text">Register</string>

    <string name="required_phone_number_prefix_without_country_code">01</string>
    <string name="err_msg_phone_number">Invelid phone no.</string>
    <string name="err_msg_wallet_pin">Invalid wallet PIN</string>
    <string name="err_msg_user_name">Name cant be empty</string>

    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirmation_title">Logout!</string>
    <string name="logout_confirmation">Do you want to logout from খুচরা টাকা?</string>
</resources>
